Starting work - Initialize bootstrap grid and write some components scss styles

--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -17,18 +17,12 @@ $color__facebook:    #3b5998;
 $color__google:      #dd4b39;
 
 
-// Material Design Colors - https://www.materialpalette.com/red/indigo
-$color__persian-red: #d32f2f;
+// Colors of mateusz-archicinski.pl page
+$color__persian-red: #c62828;
 $color__red-orange:  #f44336;
-$color__we-peep:     #ffcdd2;
-$color__neon-blue:   #536dfe;
+$color__we-peep:     #feccd1;
+$color__denim:       #1565c0;
+$color__black:       #0a0a0a;
 $color__nero:        #212121;
 $color__grey:        #757575;
 $color__silver:      #bdbdbd;
-
-
-// Material Design Colors - https://www.materialpalette.com/teal/amber
-$color__pine-green:  #00796b;
-$color__dark-cyan:   #009688;
-$color__scandal:     #b2dfdb;
-$color__amber:       #ffc107;
