--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -28,10 +28,10 @@ $font-weight__normal:  400;
 $font-weight__lighter: 300;
 
 // Colors
-$primary-color-dark:   $color__pine-green;
-$primary-color:        $color__dark-cyan;
-$primary-color-light:  $color__scandal;
-$accent-color:         $color__amber;
+$primary-color-dark:   $color__persian-red;
+$primary-color:        $color__red-orange;
+$primary-color-light:  $color__we-peep;
+$accent-color:         $color__denim;
 $primary-text-color:   $color__nero;
 $secondary-text-color: $color__grey;
 $divider-color:        $color__silver;
