--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -7,5 +7,6 @@ extends layout/_layout
     Web Page - Content
 
 block content
-    header
-        h1 Normal - Template
+    include layout/_header
+    include layout/_wrapper
+    include layout/_footer
