--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,3 +1,24 @@
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~//
 //~~~~~~* MAIN HEADER *~~~~~~//+
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~//
+
+
+// .main-header__fixed
+$main-header__fixed__background-color: $primary-text-color !default;
+$main-header__fixed__box-shadow: 0 0 8px 0 rgba($color__black, 0.8) !default;
+
+
+.main-header {
+    width: 100%;
+    height: 65px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: 0.2s background-color ease,
+                0.2s box-shadow ease;
+    &__fixed {
+        position: fixed;
+        background-color: $main-header__fixed__background-color;
+        box-shadow: $main-header__fixed__box-shadow;
+    }
+}
