--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,6 +32,15 @@
 
 
 // ---------------------
+//     FRAMEWORKS
+// ---------------------
+
+
+    // *--------- BOOTSTRAP ---------*
+    @import '../../bower_components/bootstrap/scss/bootstrap-grid';
+
+
+// ---------------------
 //     COMPONENTS
 // ---------------------
 
@@ -55,6 +64,14 @@
 
     // *--------- SPRITES ---------*
     @import 'components/sprites/sprite';
+
+
+    // *--------- SIDE LOGO ---------*
+    @import 'components/side-logo';
+
+
+    // *--------- SIDE NAV ---------*
+    @import 'components/side-nav';
 
 
 // ---------------------
