--- a/src/sass/components/_site-logo.scss
+++ b/src/sass/components/_site-logo.scss
@@ -1,8 +1,8 @@
 //~~~~~~~~~~~~~~~~~~~~~~~~~//
-//~~~~~~* SIDE LOGO *~~~~~~//+
+//~~~~~~* SITE LOGO *~~~~~~//+
 //~~~~~~~~~~~~~~~~~~~~~~~~~//
 
-.side-logo {
+.site-logo {
     &__img {
         max-width: 100%;
         display: inline-block;
