--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -4,7 +4,7 @@
 
 
 // Default Colors
-$color__black:       #000;
+$color__black-1:     #000;
 $color__white:       #fff;
 
 
@@ -22,7 +22,7 @@ $color__persian-red: #c62828;
 $color__red-orange:  #f44336;
 $color__we-peep:     #feccd1;
 $color__denim:       #1565c0;
-$color__black:       #0a0a0a;
+$color__black-2:     #0a0a0a;
 $color__nero:        #212121;
 $color__grey:        #757575;
 $color__silver:      #bdbdbd;
