--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -66,12 +66,16 @@
     @import 'components/sprites/sprite';
 
 
-    // *--------- SIDE LOGO ---------*
-    @import 'components/side-logo';
+    // *--------- SITE LOGO ---------*
+    @import 'components/site-logo';
 
 
-    // *--------- SIDE NAV ---------*
-    @import 'components/side-nav';
+    // *--------- SITE NAV ---------*
+    @import 'components/site-nav';
+
+
+    // *--------- HOME ---------*
+    @import 'components/home';
 
 
 // ---------------------
