--- a/src/templates/layout/_header.pug
+++ b/src/templates/layout/_header.pug
@@ -1,22 +1,20 @@
 //-
     Main Header
 
-header.main-header.main-header__fixed
+header.main-header
     .container
         .row.no-gutters.align-items-center.justify-content-between
-            .site-logo__wrapper
-                img(src="images/logo/logo.png" alt=data.header.sideLogo.alt width="94" height="28" class="side-logo__img")
-            nav.side-nav__wrapper
-                ul.side-nav__list
+            a(href="/" class="site-logo__wrapper")
+                img(src="images/logo/logo.png" alt=data.mainHeader.siteLogo.alt width="94" height="28" class="site-logo__img")
+            nav.site-nav__wrapper
+                ul.row.site-nav__list
                     li
-                        a(href="#home" class="side-nav__link")= data.header.sideNav.home
+                        a(href="#home" class="site-nav__link")= data.mainHeader.siteNav.home
                     li
-                        a(href="#about-me" class="side-nav__link")= data.header.sideNav.aboutMe
+                        a(href="#about-me" class="site-nav__link")= data.mainHeader.siteNav.aboutMe
                     li
-                        a(href="#services" class="side-nav__link")= data.header.sideNav.services
+                        a(href="#services" class="site-nav__link")= data.mainHeader.siteNav.services
                     li
-                        a(href="#portfolio" class="side-nav__link")= data.header.sideNav.portfolio
+                        a(href="#portfolio" class="site-nav__link")= data.mainHeader.siteNav.portfolio
                     li
-                        a(href="#contact" class="side-nav__link")= data.header.sideNav.contact
-                    //li
-                        a(href="#contact" class="side-nav__link language-settings__language")= data.header.sideNav.contact
+                        a(href="#contact" class="site-nav__link")= data.mainHeader.siteNav.contact
