--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -74,6 +74,10 @@
     @import 'components/site-nav';
 
 
+    // *--------- LANGUAGE SETTINGS ---------*
+    @import 'components/language-settings';
+
+
     // *--------- HOME ---------*
     @import 'components/home';
 
