--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -22,10 +22,15 @@ $font__sans-serif:      sans-serif;
 $font-size__1:         1em;
 
 // Fonts Weights
+$font-weight__bolder-9:  900;
+$font-weight__bolder-8:  800;
+$font-weight__bolder-7:  700;
 $font-weight__bolder:  600;
 $font-weight__bold:    500;
 $font-weight__normal:  400;
 $font-weight__lighter: 300;
+$font-weight__lighter-2: 200;
+$font-weight__lighter-1: 100;
 
 // Colors
 $primary-color-dark:   $color__persian-red;
