--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -3,36 +3,45 @@
 //~~~~~~~~~~~~~~~~~~~~//
 
 
-// .home-wrapper
-
+// .home-wrapper::after
+// sass-lint:disable no-color-literals
+$home-wrapper__after__background-image: linear-gradient(to top, $color__black-2 0%, rgba($color__seal-brown, 0.25) 50%, rgba($color__seal-brown, 0.25) 50%, $color__black-2 100%), url(../images/noise.png) !default;
+// sass-lint:enable no-color-literals
 
 
 .home {
     &-wrapper {
-        min-height: calc(100vh + 200px);
-        background-image: url(https://aazztech.com/demos/themes/html/rida/rida/images/Img_4.jpg);
+        background-image: url(https://t4.ftcdn.net/jpg/01/01/49/89/240_F_101498911_eR4DpsDTpdcwuD4UNOjdr9RDiFFAwn3Q.jpg); // img?
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
         &::after {
-            content: '';
+            content: "";
             width: 100%;
             height: 100%;
-            background: linear-gradient(to top, #0a0a0a 0%, rgba(19,19,19,0.25) 50%, rgba(19,19,19,0.25) 50%, #0a0a0a 100%), url(../images/noise.png);
-            //background-image: url(../images/noise.png);
+            background-image: $home-wrapper__after__background-image;
             position: absolute;
             z-index: 1;
             left: 0;
             top: 0;
         }
-        h1 {
-            margin: 0;
+    }
+    &-row {
+        position: relative;
+        z-index: 2;
+    }
+    &-wrapper,
+    &-row {
+        min-height: calc(100vh + 200px);
+    }
+    &-header {
+        &-buttons {
+            text-align: center;
+            & > * {
+                width: 180px;
+            }
         }
     }
-}
-
-.about-me-wrapper {
-    height: 1000px;
 }
