--- a/src/sass/components/_site-nav.scss
+++ b/src/sass/components/_site-nav.scss
@@ -13,6 +13,10 @@ $side-nav__link__color: $tertiary-text-color !default;
 $side-nav__link-hover__color: $color__white !default;
 // .side-nav__link:after
 $side-nav__link-after__background-color: $primary-color !default;
+// .side-nav__link-active:hover
+$side-nav__link-active__color: $color__white !default;
+// .side-nav__link-active:after
+$side-nav__link-active-after__background-color: $primary-color-dark !default;
 
 
 .site-nav {
@@ -50,6 +54,13 @@ $side-nav__link-after__background-color: $primary-color !default;
             left: 20%;
             bottom: 14px;
             transition: 0.2s height ease-in-out;
+        }
+        &-active {
+            color: $side-nav__link-active__color;
+            &::after {
+                height: 3px;
+                background-color: $side-nav__link-active-after__background-color;
+            }
         }
     }
 }
