--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -23,6 +23,7 @@ $color__red-orange:  #f44336;
 $color__we-peep:     #feccd1;
 $color__denim:       #1565c0;
 $color__black-2:     #0a0a0a;
+$color__seal-brown:  #131313;
 $color__nero:        #212121;
 $color__grey:        #757575;
 $color__silver:      #bdbdbd;
