--- a/src/templates/layout/_header.pug
+++ b/src/templates/layout/_header.pug
@@ -6,11 +6,11 @@ header.main-header
         .row.no-gutters.align-items-center.justify-content-between
             a(href="/" class="site-logo__wrapper")
                 img(src="images/logo/logo.png" alt=data.mainHeader.siteLogo.alt width="94" height="28" class="site-logo__img")
-            h1.text-hidden= data.mainHeader.h1 
+            h1.text-hidden= data.mainHeader.h1
             nav.site-nav__wrapper
                 ul.row.site-nav__list
                     li
-                        a(href="#home" class="site-nav__link")= data.mainHeader.siteNav.home
+                        a(href="#home" class="site-nav__link site-nav__link-active")= data.mainHeader.siteNav.home
                     li
                         a(href="#about-me" class="site-nav__link")= data.mainHeader.siteNav.aboutMe
                     li
