Working with buttons/heading-separator/home components

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -71,7 +71,7 @@ $primary-tertiary-heading__color: $color__white !default;
 .primary-heading,
 .tertiary-heading {
     color: $primary-tertiary-heading__color;
-    //text-align: center;
+    text-align: center;
 }
 
 .primary-heading,
