--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -4,36 +4,42 @@
 
 
 // .btn
-$btn__background-color: rgba($color__white, 0.1) !default;
+$btn__background-color: rgba($color__black-1, 0.1) !default;
 $btn__font-size: 1em !default;
 $btn__font-weight: $font-weight__bolder-7 !default;
 $btn__color: $color__white !default;
-$btn__border: 1px solid $color__white !default;
-// .btn:hover
-$btn__hover__background-color: $color__white !default;
-$btn__hover__color: $color__black-1 !default;
+$btn__border: 1px solid $color__black-1 !default;
+// .btn:hover::after
+$btn__hover__after__background-color: $color__black-1 !default;
+
+// .btn-primary
+$btn-primary__background-color: rgba($primary-color, 0.1) !default;
+$btn-primary__border-color: $primary-color !default;
+// .btn-primary:hover::after
+$btn-primary__hover__after__background-color: $primary-color !default;
 
 // .btn-primary-dark
 $btn-primary-dark__background-color: rgba($primary-color-dark, 0.1) !default;
 $btn-primary-dark__border-color: $primary-color-dark !default;
-// .btn-primary-dark:hover
-$btn-primary-dark__hover__background-color: $primary-color-dark !default;
+// .btn-primary-dark:hover::after
+$btn-primary-dark__hover__after__background-color: $primary-color-dark !default;
 
 // .btn-primary-light
 $btn-primary-light__background-color: rgba($primary-color-light, 0.1) !default;
 $btn-primary-light__border-color: $primary-color-light !default;
-// .btn-primary-light:hover
-$btn-primary-light__hover__background-color: $primary-color-light !default;
+// .btn-primary-light:hover::after
+$btn-primary-light__hover__after__background-color: $primary-color-light !default;
 
 // .btn-accent
 $btn-accent__background-color: rgba($accent-color, 0.1) !default;
 $btn-accent__border-color: $accent-color !default;
-// .btn-accent:hover
-$btn-accent__hover__background-color: $accent-color !default;
+// .btn-accent:hover::after
+$btn-accent__hover__after__background-color: $accent-color !default;
 
 
 .btn {
     background-color: $btn__background-color;
+    position: relative;
     display: inline-block;
     font-size: $btn__font-size;
     font-weight: $btn__font-weight;
@@ -41,30 +47,97 @@ $btn-accent__hover__background-color: $accent-color !default;
     text-decoration: none;
     text-transform: uppercase;
     color: $btn__color;
-    padding: 17.5px 20px;
-    border-radius: 2px;
+    padding: 16.5px 20px;
     border: $btn__border;
-    transition: 0.2s background-color ease-in-out, 0.3s color ease-in-out;
+    &.to-left {
+        &::after {
+            width: 0;
+            height: 100%;
+            left: auto;
+            right: 0;
+        }
+    }
+    &.to-right {
+        &::after {
+            width: 0;
+            height: 100%;
+        }
+    }
+    &.to-top {
+        &::after {
+            width: 100%;
+            height: 0;
+            top: auto;
+            bottom: 0;
+        }
+    }
+    &.to-bottom {
+        &::after {
+            width: 100%;
+            height: 0;
+        }
+    }
+    &.to-top,
+    &.to-bottom {
+        &:hover {
+            &::after {
+                height: 100%;
+            }
+        }
+    }
+    &,
+    &.to-left,
+    &.to-right,
+    &.to-top,
+    &.to-bottom {
+        &::after {
+            content: "";
+            position: absolute;
+            z-index: -1;
+            transition: 0.2s width ease-in-out,
+                        0.2s height ease-in-out,
+                        0.3s background-color ease-in-out;
+        }
+    }
+    &::after {
+        width: 0;
+        height: 100%;
+        left: 0;
+        top: 0;
+    }
     &:hover {
-        background-color: $btn__hover__background-color;
-        //color: $btn__hover__color;
+        &::after {
+            width: 100%;
+            background-color: $btn__hover__after__background-color;
+        }
     }
     &:nth-child(n+2) {
         margin-left: 25px;
     }
     &-primary {
+        background-color: $btn-primary__background-color;
+        border-color: $btn-primary__border-color;
+        &:hover {
+            &::after {
+                background-color: $btn-primary__hover__after__background-color;
+            }
+        }
         &-dark {
             background-color: $btn-primary-dark__background-color;
             border-color: $btn-primary-dark__border-color;
             &:hover {
-                background-color: $btn-primary-dark__hover__background-color;
+                &::after {
+                    background-color: $btn-primary-dark__hover__after__background-color;
+                }
             }
         }
         &-light {
             background-color: $btn-primary-light__background-color;
             border-color: $btn-primary-light__border-color;
             &:hover {
-                background-color: $btn-primary-light__hover__background-color;
+                &::after {
+                    background-color: $btn-primary-light__hover__after__background-color;
+                }
             }
         }
     }
@@ -72,7 +145,9 @@ $btn-accent__hover__background-color: $accent-color !default;
         background-color: $btn-accent__background-color;
         border-color: $btn-accent__border-color;
         &:hover {
-            background-color: $btn-accent__hover__background-color;
+            &::after {
+                background-color: $btn-accent__hover__after__background-color;
+            }
         }
     }
 }
