--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -82,6 +82,10 @@
     @import 'components/home';
 
 
+    // *--------- HEADING SEPARATOR ---------*
+    @import 'components/heading-separator';
+
+
 // ---------------------
 //     MODULES
 // ---------------------
