--- a/src/css/main.css
+++ b/src/css/main.css
@@ -189,7 +189,8 @@
 
 .primary-heading,
 .tertiary-heading {
-  color: #fff; }
+  color: #fff;
+  text-align: center; }
 
 .primary-heading,
 .secondary-heading,
@@ -1580,7 +1581,8 @@ html {
             align-self: stretch !important; } }
 
 .btn {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
+  position: relative;
   display: inline-block;
   font-size: 1em;
   font-weight: 700;
@@ -1588,28 +1590,60 @@ html {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
-  padding: 17.5px 20px;
-  border-radius: 2px;
-  border: 1px solid #fff;
-  transition: 0.2s background-color ease-in-out, 0.3s color ease-in-out; }
-  .btn:hover {
-    background-color: #fff; }
+  padding: 16.5px 20px;
+  border: 1px solid #000; }
+  .btn.to-left::after {
+    width: 0;
+    height: 100%;
+    left: auto;
+    right: 0; }
+  .btn.to-right::after {
+    width: 0;
+    height: 100%; }
+  .btn.to-top::after {
+    width: 100%;
+    height: 0;
+    top: auto;
+    bottom: 0; }
+  .btn.to-bottom::after {
+    width: 100%;
+    height: 0; }
+  .btn.to-top:hover::after, .btn.to-bottom:hover::after {
+    height: 100%; }
+  .btn::after, .btn.to-left::after, .btn.to-right::after, .btn.to-top::after, .btn.to-bottom::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    transition: 0.2s width ease-in-out, 0.2s height ease-in-out, 0.3s background-color ease-in-out; }
+  .btn::after {
+    width: 0;
+    height: 100%;
+    left: 0;
+    top: 0; }
+  .btn:hover::after {
+    width: 100%;
+    background-color: #000; }
   .btn:nth-child(n+2) {
     margin-left: 25px; }
-  .btn-primary-dark {
-    background-color: rgba(198, 40, 40, 0.1);
-    border-color: #c62828; }
-    .btn-primary-dark:hover {
-      background-color: #c62828; }
-  .btn-primary-light {
-    background-color: rgba(254, 204, 209, 0.1);
-    border-color: #feccd1; }
-    .btn-primary-light:hover {
-      background-color: #feccd1; }
+  .btn-primary {
+    background-color: rgba(244, 67, 54, 0.1);
+    border-color: #f44336; }
+    .btn-primary:hover::after {
+      background-color: #f44336; }
+    .btn-primary-dark {
+      background-color: rgba(198, 40, 40, 0.1);
+      border-color: #c62828; }
+      .btn-primary-dark:hover::after {
+        background-color: #c62828; }
+    .btn-primary-light {
+      background-color: rgba(254, 204, 209, 0.1);
+      border-color: #feccd1; }
+      .btn-primary-light:hover::after {
+        background-color: #feccd1; }
   .btn-accent {
     background-color: rgba(21, 101, 192, 0.1);
     border-color: #1565c0; }
-    .btn-accent:hover {
+    .btn-accent:hover::after {
       background-color: #1565c0; }
 
 .site-logo__img {
@@ -1696,10 +1730,37 @@ html {
 .home-wrapper, .home-row {
   min-height: calc(100vh + 200px); }
 
-.home-header-buttons {
-  text-align: center; }
-  .home-header-buttons > * {
-    width: 180px; }
+.home-header {
+  margin-bottom: 100px; }
+  .home-header-buttons {
+    text-align: center;
+    margin-top: 50px; }
+    .home-header-buttons > * {
+      width: 180px; }
+
+.heading-separator {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 14px 0 18px; }
+  .heading-separator__line {
+    width: 240px;
+    height: 1px;
+    background-color: #fff; }
+  .heading-separator__square {
+    width: 20px;
+    height: 20px;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    border: 1px solid #fff;
+    margin: 0 20px; }
 
 *,
 *::before,
